--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "encoding": "^0.1.13",
     "eslint": "^8.45.0",
     "next": "13.4.19",
+    "play-dl": "^1.9.7",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-webcam": "^7.2.0",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "youtube-sr": "^4.3.11"
   },
   "devDependencies": {
     "eslint-config-next": "13.4.19"
